<resources>
    <string name="app_name">Calculator</string>
    <string name="button_number_zero">0</string>
    <string name="button_number_one">1</string>
    <string name="button_number_two">2</string>
    <string name="button_number_three">3</string>
    <string name="button_number_four">4</string>
    <string name="button_number_five">5</string>
    <string name="button_number_six">6</string>
    <string name="button_number_seven">7</string>
    <string name="button_number_eight">8</string>
    <string name="button_number_nine">9</string>
    <string name="button_operation_delete">DELETE</string>
    <string name="button_operation_clear">CLEAR</string>
    <string name="text_message">0</string>
    <string name="button_equal">=</string>
    <string name="button_multiplication">x</string>
    <string name="button_division">%</string>
    <string name="button_add">+</string>
    <string name="button_subtraction">-</string>
    <string name="division_by_zero">Division by zero</string>
</resources>
